Docs (notebooks): update wording
Signed-off-by: Alessandro Pappalardo <volcacius@users.noreply.github.com>

--- a/notebooks/01_quant_tensor_quant_conv2d_overview.ipynb
+++ b/notebooks/01_quant_tensor_quant_conv2d_overview.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# An overview of QuantTensor and QuantConv2d\n",
     "\n",
-    "In this tutorial, we take a look at `QuantTensor`, a basic data structure in Brevitas, and at `QuantConv2d`, a typical quantized layer. `QuantConv2d` is an instance of a `QuantWeightBiasInputOutputLayer` (typically imported as `QuantWBIOL`), meaning that it supports quantization of its weight, bias, input and output. Other instances of `QuantWBIOL` are `QuantLinear`, `QuantConv1d`, `QuantConvTranspose1d` and `QuantConvTranspose2d`, and they all follow the same principles.\n",
+    "In this initial tutorial, we take a first look at `QuantTensor`, a basic data structure in Brevitas, and at `QuantConv2d`, a typical quantized layer. `QuantConv2d` is an instance of a `QuantWeightBiasInputOutputLayer` (typically imported as `QuantWBIOL`), meaning that it supports quantization of its weight, bias, input and output. Other instances of `QuantWBIOL` are `QuantLinear`, `QuantConv1d`, `QuantConvTranspose1d` and `QuantConvTranspose2d`, and they all follow the same principles.\n",
     "\n",
     "If we take a look at the `__init__` method of `QuantConv2d`, we notice a few things:"
    ]
@@ -232,6 +232,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## QuantTensor\n",
+    "\n",
     "We can directly observe the quantized weights by calling the weight quantizer on the layer's weights: `default_quant_conv.weight_quant(quant_conv.weight)`, which for shortness is already implemented as `default_quant_conv.quant_weight()` :"
    ]
   },
@@ -433,6 +435,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Input Quantization\n",
+    "\n",
     "We can obtain a valid output `QuantTensor` by making sure that both input and weight of `QuantConv2d` are quantized. To do so, we can set a quantizer for `input_quant`. In this example we pick a *signed 8-bit* quantizer with *per-tensor floating-point scale factor*:"
    ]
   },
@@ -671,20 +675,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Output Quantization\n",
+    "\n",
     "Let's now look at would have happened if we instead enabled output quantization:"
    ]
   },
@@ -758,6 +752,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Bias Quantization\n",
+    "\n",
     "There is an important scenario where the various options we just saw make a practical difference, and it's quantization of *bias*. In many contexts, such as in the ONNX standard opset and in FINN, bias is assumed to be quantized with scale factor equal to *input scale * weight scale*, which means that we need a valid quantized input somehow. A predefined bias quantizer that reflects that assumption is `brevitas.quant.scaled_int.Int8Bias`. If we simply tried to set it to a `QuantConv2d` without any sort of input quantization, we would get an error:"
    ]
   },
