Fix (flexml): PTQ calibration fix for training/eval mode

--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -2242,16 +2242,16 @@
    "source": [
     "from brevitas.graph.calibrate import finalize_collect_stats\n",
     "from brevitas.graph.calibrate import BiasCorrection\n",
-    "from brevitas.graph.calibrate import DisableQuantInference\n",
+    "from brevitas.graph.calibrate import calibration_mode\n",
     "\n",
     "def calibrate_model(calibration_loader, quant_model, args):\n",
     "    with torch.no_grad():\n",
-    "        # Put the model in training mode to collect statistics\n",
-    "        quant_model.train()\n",
-    "        for i, (images, _) in enumerate(calibration_loader):\n",
-    "            print(f'Calibration iteration {i}')\n",
-    "            # Disable quantization while collecting statistics\n",
-    "            DisableQuantInference().apply(quant_model, images)\n",
+    "        # Put the model in calibration mode to collect statistics\n",
+    "        # Quantization is automatically disabled during the calibration, and re-enabled at the end\n",
+    "        with calibration_mode(quant_model):\n",
+    "            for i, (images, _) in enumerate(calibration_loader):\n",
+    "                print(f'Calibration iteration {i}')\n",
+    "                quant_model(images)\n",
     "        # Put the model in inference mode to use those statistics\n",
     "        quant_model.eval()\n",
     "        bc = BiasCorrection(iterations=len(calibration_loader))\n",
@@ -2259,8 +2259,8 @@
     "            print(f'Bias correction iteration {i}')\n",
     "            # Apply bias correction\n",
     "            quant_model = bc.apply(quant_model, images)\n",
-    "    model.apply(finalize_collect_stats)\n",
-    "    return model"
+    "    quant_model.apply(finalize_collect_stats)\n",
+    "    return quant_model"
    ]
   }
  ],
