Fix (test): Add support for testing notebooks

--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -2154,71 +2154,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Export to PyXIR\n",
-    "\n",
-    "It's also possible to export to Xilinx' own PyXIR, which supports a custom ONNX dialect for 8b fixed point quantization:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Serving 'quant_conv_8b_fixed_point.onnx' at http://localhost:8086\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"400\"\n",
-       "            src=\"http://localhost:8086/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1720e9102e8>"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.manual_seed(0)\n",
-    "\n",
-    "from brevitas.nn import QuantConv2d\n",
-    "from brevitas.quant import Int8WeightPerTensorFixedPoint, Int8ActPerTensorFixedPoint\n",
-    "from brevitas.quant import Int8BiasPerTensorFixedPointInternalScaling\n",
-    "from brevitas.export import export_pyxir_onnx\n",
-    "\n",
-    "float_inp_2d = torch.randn(1, 2, 5, 5)\n",
-    "quant_conv_8b_fixed_point = QuantConv2d(\n",
-    "    2, 4, 3, bias=True, \n",
-    "    input_quant=Int8WeightPerTensorFixedPoint,\n",
-    "    weight_quant=Int8WeightPerTensorFixedPoint,\n",
-    "    output_quant=Int8ActPerTensorFixedPoint,\n",
-    "    bias_quant=Int8BiasPerTensorFixedPointInternalScaling)\n",
-    "\n",
-    "output_path = 'quant_conv_8b_fixed_point.onnx'\n",
-    "export_pyxir_onnx(quant_conv_8b_fixed_point, input_t=float_inp_2d, export_path=output_path)\n",
-    "show_netron(output_path, 8086)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Brevitas and FX"
    ]
   },
@@ -2279,13 +2214,39 @@
     "    model.apply(finalize_collect_stats)\n",
     "    return model"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stop all previous running netron instances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "netron.stop(address=(\"localhost\", 8082))\n",
+    "netron.stop(address=(\"localhost\", 8083))\n",
+    "netron.stop(address=(\"localhost\", 8084))\n",
+    "netron.stop(address=(\"localhost\", 8085))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pt190] *",
+   "display_name": "Python 3.7.15 ('torch_1.10')",
    "language": "python",
-   "name": "conda-env-pt190-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2297,7 +2258,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "98d39f4fefefd06bad749c114549705efc94e31e1348b8fb7b25329049b354fa"
+   }
   }
  },
  "nbformat": 4,
