skip netron execution for tests

--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -1891,8 +1891,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(0)\n",
+    "\n",
+    "from brevitas.nn import QuantConv1d\n",
+    "from brevitas.quant import Int8WeightPerTensorFloat, Int8ActPerTensorFloat, Int16Bias\n",
+    "from brevitas.export import export_standard_qop_onnx\n",
+    "\n",
+    "float_inp = torch.randn(1, 2, 5)\n",
+    "\n",
+    "quant_conv_4b8b = QuantConv1d(\n",
+    "    2, 4, 3, bias=True, weight_bit_width=4,\n",
+    "    input_quant=Int8ActPerTensorFloat,\n",
+    "    output_quant=Int8ActPerTensorFloat,\n",
+    "    bias_quant=Int16Bias)\n",
+    "\n",
+    "output_path = 'qop_onnx_conv_4b8b.onnx'\n",
+    "export_standard_qop_onnx(quant_conv_4b8b, input_t=float_inp, export_path=output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "tags": [
+     "skip-execution"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1925,22 +1953,6 @@
     }
    ],
    "source": [
-    "torch.manual_seed(0)\n",
-    "\n",
-    "from brevitas.nn import QuantConv1d\n",
-    "from brevitas.quant import Int8WeightPerTensorFloat, Int8ActPerTensorFloat, Int16Bias\n",
-    "from brevitas.export import export_standard_qop_onnx\n",
-    "\n",
-    "float_inp = torch.randn(1, 2, 5)\n",
-    "\n",
-    "quant_conv_4b8b = QuantConv1d(\n",
-    "    2, 4, 3, bias=True, weight_bit_width=4,\n",
-    "    input_quant=Int8ActPerTensorFloat,\n",
-    "    output_quant=Int8ActPerTensorFloat,\n",
-    "    bias_quant=Int16Bias)\n",
-    "\n",
-    "output_path = 'qop_onnx_conv_4b8b.onnx'\n",
-    "export_standard_qop_onnx(quant_conv_4b8b, input_t=float_inp, export_path=output_path)\n",
     "show_netron(output_path, 8082)"
    ]
   },
@@ -1964,8 +1976,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(0)\n",
+    "\n",
+    "from brevitas.export import export_brevitas_onnx\n",
+    "from brevitas.quant import Int8WeightPerTensorFloat, Int8ActPerTensorFloat, Int16Bias\n",
+    "\n",
+    "float_inp = torch.randn(1, 2, 5)\n",
+    "\n",
+    "quant_conv_4b8b = QuantConv1d(\n",
+    "    2, 4, 3, bias=True, weight_bit_width=4,\n",
+    "    input_quant=Int8ActPerTensorFloat,\n",
+    "    output_quant=Int8ActPerTensorFloat,\n",
+    "    bias_quant=Int16Bias)\n",
+    "\n",
+    "output_path = 'brevitas_onnx_conv4b8b.onnx'\n",
+    "export_brevitas_onnx(quant_conv_4b8b, input_t=float_inp, export_path=output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "tags": [
+     "skip-execution"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1998,21 +2037,6 @@
     }
    ],
    "source": [
-    "torch.manual_seed(0)\n",
-    "\n",
-    "from brevitas.export import export_brevitas_onnx\n",
-    "from brevitas.quant import Int8WeightPerTensorFloat, Int8ActPerTensorFloat, Int16Bias\n",
-    "\n",
-    "float_inp = torch.randn(1, 2, 5)\n",
-    "\n",
-    "quant_conv_4b8b = QuantConv1d(\n",
-    "    2, 4, 3, bias=True, weight_bit_width=4,\n",
-    "    input_quant=Int8ActPerTensorFloat,\n",
-    "    output_quant=Int8ActPerTensorFloat,\n",
-    "    bias_quant=Int16Bias)\n",
-    "\n",
-    "output_path = 'brevitas_onnx_conv4b8b.onnx'\n",
-    "export_brevitas_onnx(quant_conv_4b8b, input_t=float_inp, export_path=output_path)\n",
     "show_netron(output_path, 8083)"
    ]
   },
@@ -2025,8 +2049,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(0)\n",
+    "\n",
+    "quant_conv_4b_weights = QuantConv1d(2, 4, 3, bias=True, weight_bit_width=4)\n",
+    "\n",
+    "output_path = 'brevitas_onnx_conv_4b_weights.onnx'\n",
+    "export_brevitas_onnx(quant_conv_4b_weights, input_t=float_inp, export_path=output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "tags": [
+     "skip-execution"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2059,12 +2101,6 @@
     }
    ],
    "source": [
-    "torch.manual_seed(0)\n",
-    "\n",
-    "quant_conv_4b_weights = QuantConv1d(2, 4, 3, bias=True, weight_bit_width=4)\n",
-    "\n",
-    "output_path = 'brevitas_onnx_conv_4b_weights.onnx'\n",
-    "export_brevitas_onnx(quant_conv_4b_weights, input_t=float_inp, export_path=output_path)\n",
     "show_netron(output_path, 8084)"
    ]
   },
@@ -2081,8 +2117,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from brevitas.quant import ShiftedUint8ActPerTensorFloat\n",
+    "from brevitas.export import export_pytorch_quant\n",
+    "\n",
+    "class ReducedRangeActQuant(ShiftedUint8ActPerTensorFloat):\n",
+    "    bit_width = 7\n",
+    "\n",
+    "quant_conv_8b7b = QuantConv1d(\n",
+    "    2, 4, 3, bias=True,\n",
+    "    input_quant=ReducedRangeActQuant,\n",
+    "    output_quant=ReducedRangeActQuant,\n",
+    "    bias_quant=Int16Bias)\n",
+    "\n",
+    "output_path = 'pytorch_qf_conv_8b7b.pt'\n",
+    "export_pytorch_quant(quant_conv_8b7b, input_t=float_inp, export_path=output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "tags": [
+     "skip-execution"
+    ]
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -2123,20 +2185,6 @@
     }
    ],
    "source": [
-    "from brevitas.quant import ShiftedUint8ActPerTensorFloat\n",
-    "from brevitas.export import export_pytorch_quant\n",
-    "\n",
-    "class ReducedRangeActQuant(ShiftedUint8ActPerTensorFloat):\n",
-    "    bit_width = 7\n",
-    "\n",
-    "quant_conv_8b7b = QuantConv1d(\n",
-    "    2, 4, 3, bias=True,\n",
-    "    input_quant=ReducedRangeActQuant,\n",
-    "    output_quant=ReducedRangeActQuant,\n",
-    "    bias_quant=Int16Bias)\n",
-    "\n",
-    "output_path = 'pytorch_qf_conv_8b7b.pt'\n",
-    "export_pytorch_quant(quant_conv_8b7b, input_t=float_inp, export_path=output_path)\n",
     "show_netron(output_path, 8085)"
    ]
   },
@@ -2213,32 +2261,6 @@
     "            quant_model = bc.apply(quant_model, images)\n",
     "    model.apply(finalize_collect_stats)\n",
     "    return model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Clean up"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Stop all previous running netron instances"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "netron.stop(address=(\"localhost\", 8082))\n",
-    "netron.stop(address=(\"localhost\", 8083))\n",
-    "netron.stop(address=(\"localhost\", 8084))\n",
-    "netron.stop(address=(\"localhost\", 8085))"
    ]
   }
  ],
