--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -1891,8 +1891,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(0)\n",
+    "\n",
+    "from brevitas.nn import QuantConv1d\n",
+    "from brevitas.quant import Int8WeightPerTensorFloat, Int8ActPerTensorFloat, Int16Bias\n",
+    "from brevitas.export import export_standard_qop_onnx\n",
+    "\n",
+    "float_inp = torch.randn(1, 2, 5)\n",
+    "\n",
+    "quant_conv_4b8b = QuantConv1d(\n",
+    "    2, 4, 3, bias=True, weight_bit_width=4,\n",
+    "    input_quant=Int8ActPerTensorFloat,\n",
+    "    output_quant=Int8ActPerTensorFloat,\n",
+    "    bias_quant=Int16Bias)\n",
+    "\n",
+    "output_path = 'qop_onnx_conv_4b8b.onnx'\n",
+    "export_standard_qop_onnx(quant_conv_4b8b, input_t=float_inp, export_path=output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "tags": [
+     "skip-execution"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1925,22 +1953,6 @@
     }
    ],
    "source": [
-    "torch.manual_seed(0)\n",
-    "\n",
-    "from brevitas.nn import QuantConv1d\n",
-    "from brevitas.quant import Int8WeightPerTensorFloat, Int8ActPerTensorFloat, Int16Bias\n",
-    "from brevitas.export import export_standard_qop_onnx\n",
-    "\n",
-    "float_inp = torch.randn(1, 2, 5)\n",
-    "\n",
-    "quant_conv_4b8b = QuantConv1d(\n",
-    "    2, 4, 3, bias=True, weight_bit_width=4,\n",
-    "    input_quant=Int8ActPerTensorFloat,\n",
-    "    output_quant=Int8ActPerTensorFloat,\n",
-    "    bias_quant=Int16Bias)\n",
-    "\n",
-    "output_path = 'qop_onnx_conv_4b8b.onnx'\n",
-    "export_standard_qop_onnx(quant_conv_4b8b, input_t=float_inp, export_path=output_path)\n",
     "show_netron(output_path, 8082)"
    ]
   },
@@ -1964,8 +1976,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(0)\n",
+    "\n",
+    "from brevitas.export import export_brevitas_onnx\n",
+    "from brevitas.quant import Int8WeightPerTensorFloat, Int8ActPerTensorFloat, Int16Bias\n",
+    "\n",
+    "float_inp = torch.randn(1, 2, 5)\n",
+    "\n",
+    "quant_conv_4b8b = QuantConv1d(\n",
+    "    2, 4, 3, bias=True, weight_bit_width=4,\n",
+    "    input_quant=Int8ActPerTensorFloat,\n",
+    "    output_quant=Int8ActPerTensorFloat,\n",
+    "    bias_quant=Int16Bias)\n",
+    "\n",
+    "output_path = 'brevitas_onnx_conv4b8b.onnx'\n",
+    "export_brevitas_onnx(quant_conv_4b8b, input_t=float_inp, export_path=output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "tags": [
+     "skip-execution"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1998,21 +2037,6 @@
     }
    ],
    "source": [
-    "torch.manual_seed(0)\n",
-    "\n",
-    "from brevitas.export import export_brevitas_onnx\n",
-    "from brevitas.quant import Int8WeightPerTensorFloat, Int8ActPerTensorFloat, Int16Bias\n",
-    "\n",
-    "float_inp = torch.randn(1, 2, 5)\n",
-    "\n",
-    "quant_conv_4b8b = QuantConv1d(\n",
-    "    2, 4, 3, bias=True, weight_bit_width=4,\n",
-    "    input_quant=Int8ActPerTensorFloat,\n",
-    "    output_quant=Int8ActPerTensorFloat,\n",
-    "    bias_quant=Int16Bias)\n",
-    "\n",
-    "output_path = 'brevitas_onnx_conv4b8b.onnx'\n",
-    "export_brevitas_onnx(quant_conv_4b8b, input_t=float_inp, export_path=output_path)\n",
     "show_netron(output_path, 8083)"
    ]
   },
@@ -2025,8 +2049,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(0)\n",
+    "\n",
+    "quant_conv_4b_weights = QuantConv1d(2, 4, 3, bias=True, weight_bit_width=4)\n",
+    "\n",
+    "output_path = 'brevitas_onnx_conv_4b_weights.onnx'\n",
+    "export_brevitas_onnx(quant_conv_4b_weights, input_t=float_inp, export_path=output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "tags": [
+     "skip-execution"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2059,12 +2101,6 @@
     }
    ],
    "source": [
-    "torch.manual_seed(0)\n",
-    "\n",
-    "quant_conv_4b_weights = QuantConv1d(2, 4, 3, bias=True, weight_bit_width=4)\n",
-    "\n",
-    "output_path = 'brevitas_onnx_conv_4b_weights.onnx'\n",
-    "export_brevitas_onnx(quant_conv_4b_weights, input_t=float_inp, export_path=output_path)\n",
     "show_netron(output_path, 8084)"
    ]
   },
@@ -2081,8 +2117,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from brevitas.quant import ShiftedUint8ActPerTensorFloat\n",
+    "from brevitas.export import export_pytorch_quant\n",
+    "\n",
+    "class ReducedRangeActQuant(ShiftedUint8ActPerTensorFloat):\n",
+    "    bit_width = 7\n",
+    "\n",
+    "quant_conv_8b7b = QuantConv1d(\n",
+    "    2, 4, 3, bias=True,\n",
+    "    input_quant=ReducedRangeActQuant,\n",
+    "    output_quant=ReducedRangeActQuant,\n",
+    "    bias_quant=Int16Bias)\n",
+    "\n",
+    "output_path = 'pytorch_qf_conv_8b7b.pt'\n",
+    "export_pytorch_quant(quant_conv_8b7b, input_t=float_inp, export_path=output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "tags": [
+     "skip-execution"
+    ]
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -2123,20 +2185,6 @@
     }
    ],
    "source": [
-    "from brevitas.quant import ShiftedUint8ActPerTensorFloat\n",
-    "from brevitas.export import export_pytorch_quant\n",
-    "\n",
-    "class ReducedRangeActQuant(ShiftedUint8ActPerTensorFloat):\n",
-    "    bit_width = 7\n",
-    "\n",
-    "quant_conv_8b7b = QuantConv1d(\n",
-    "    2, 4, 3, bias=True,\n",
-    "    input_quant=ReducedRangeActQuant,\n",
-    "    output_quant=ReducedRangeActQuant,\n",
-    "    bias_quant=Int16Bias)\n",
-    "\n",
-    "output_path = 'pytorch_qf_conv_8b7b.pt'\n",
-    "export_pytorch_quant(quant_conv_8b7b, input_t=float_inp, export_path=output_path)\n",
     "show_netron(output_path, 8085)"
    ]
   },
@@ -2148,71 +2196,6 @@
     "\n",
     "Additionally, because bias quantization is not represented explicitly (although it is performed implicitly at 32b at runtime in the backend), any information around that is lost.\n",
     "As with standard ONNX, representing precisions below 8b is not possible."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Export to PyXIR\n",
-    "\n",
-    "It's also possible to export to Xilinx' own PyXIR, which supports a custom ONNX dialect for 8b fixed point quantization:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Serving 'quant_conv_8b_fixed_point.onnx' at http://localhost:8086\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"400\"\n",
-       "            src=\"http://localhost:8086/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1720e9102e8>"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.manual_seed(0)\n",
-    "\n",
-    "from brevitas.nn import QuantConv2d\n",
-    "from brevitas.quant import Int8WeightPerTensorFixedPoint, Int8ActPerTensorFixedPoint\n",
-    "from brevitas.quant import Int8BiasPerTensorFixedPointInternalScaling\n",
-    "from brevitas.export import export_pyxir_onnx\n",
-    "\n",
-    "float_inp_2d = torch.randn(1, 2, 5, 5)\n",
-    "quant_conv_8b_fixed_point = QuantConv2d(\n",
-    "    2, 4, 3, bias=True, \n",
-    "    input_quant=Int8WeightPerTensorFixedPoint,\n",
-    "    weight_quant=Int8WeightPerTensorFixedPoint,\n",
-    "    output_quant=Int8ActPerTensorFixedPoint,\n",
-    "    bias_quant=Int8BiasPerTensorFixedPointInternalScaling)\n",
-    "\n",
-    "output_path = 'quant_conv_8b_fixed_point.onnx'\n",
-    "export_pyxir_onnx(quant_conv_8b_fixed_point, input_t=float_inp_2d, export_path=output_path)\n",
-    "show_netron(output_path, 8086)"
    ]
   },
   {
@@ -2283,9 +2266,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pt190] *",
+   "display_name": "Python 3.7.15 ('torch_1.10')",
    "language": "python",
-   "name": "conda-env-pt190-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2297,7 +2280,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "98d39f4fefefd06bad749c114549705efc94e31e1348b8fb7b25329049b354fa"
+   }
   }
  },
  "nbformat": 4,
