Examples: Updated TVMCon tutorial

--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -2240,7 +2240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from brevitas.graph.calibrate import BiasCorrection\n",
+    "from brevitas.graph.calibrate import bias_correction_mode\n",
     "from brevitas.graph.calibrate import calibration_mode\n",
     "\n",
     "def calibrate_model(calibration_loader, quant_model, args):\n",
@@ -2251,13 +2251,12 @@
     "            for i, (images, _) in enumerate(calibration_loader):\n",
     "                print(f'Calibration iteration {i}')\n",
     "                quant_model(images)\n",
-    "        # Put the model in inference mode to use those statistics\n",
-    "        quant_model.eval()\n",
-    "        bc = BiasCorrection(iterations=len(calibration_loader))\n",
-    "        for i, (images, _) in enumerate(calibration_loader):\n",
-    "            print(f'Bias correction iteration {i}')\n",
-    "            # Apply bias correction\n",
-    "            quant_model = bc.apply(quant_model, images)\n",
+    "        \n",
+    "        # Apply bias correction\n",
+    "        with bias_correction_mode(quant_model):\n",
+    "            for i, (images, _) in enumerate(calibration_loader):\n",
+    "                print(f'Bias correction iteration {i}')\n",
+    "                quant_model(images)\n",
     "    return quant_model"
    ]
   }
