--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -2240,7 +2240,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from brevitas.graph.calibrate import finalize_collect_stats\n",
     "from brevitas.graph.calibrate import BiasCorrection\n",
     "from brevitas.graph.calibrate import calibration_mode\n",
     "\n",
@@ -2259,14 +2258,13 @@
     "            print(f'Bias correction iteration {i}')\n",
     "            # Apply bias correction\n",
     "            quant_model = bc.apply(quant_model, images)\n",
-    "    quant_model.apply(finalize_collect_stats)\n",
     "    return quant_model"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.15 ('torch_1.10')",
+   "display_name": "Python 3.6.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2280,11 +2278,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.6.9"
   },
   "vscode": {
    "interpreter": {
-    "hash": "98d39f4fefefd06bad749c114549705efc94e31e1348b8fb7b25329049b354fa"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
