--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -2122,7 +2122,7 @@
    "outputs": [],
    "source": [
     "from brevitas.quant import ShiftedUint8ActPerTensorFloat\n",
-    "from brevitas.export import export_pytorch_quant\n",
+    "from brevitas.export import export_torch_qop\n",
     "\n",
     "class ReducedRangeActQuant(ShiftedUint8ActPerTensorFloat):\n",
     "    bit_width = 7\n",
@@ -2134,7 +2134,7 @@
     "    bias_quant=Int16Bias)\n",
     "\n",
     "output_path = 'pytorch_qf_conv_8b7b.pt'\n",
-    "export_pytorch_quant(quant_conv_8b7b, input_t=float_inp, export_path=output_path)"
+    "export_torch_qop(quant_conv_8b7b, input_t=float_inp, export_path=output_path)"
    ]
   },
   {
