--- a/notebooks/ONNX_export_tutorial.ipynb
+++ b/notebooks/ONNX_export_tutorial.ipynb
@@ -626,7 +626,9 @@
    "source": [
     "Unfortunately, we have not found a way to determine what kernels onnxruntime uses for computation.\n",
     "\n",
-    "We found out about this behavior in the our development process, and confirmed it by re-compiling from source the onnxruntime library."
+    "We found out about this behavior in the our development process, and confirmed it by re-compiling from source the onnxruntime library.\n",
+    "This behavior has been observed by building from source onnxruntime v1.13.1, and ONNX v1.12.\n",
+    "It might be needed to set the following environmental variable `PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python` for this to run.\n"
    ]
   },
   {
@@ -698,7 +700,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.15 ('torch_1.13')",
+   "display_name": "Python 3.6.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -712,12 +714,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.6.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "dd80e2bcdb77f383d7ed7dca830e0011c37e5147ea9e736d3ab2a65b6ce58c29"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
