--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -1958,12 +1958,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "In general the standard ONNX opset doesn't support representing quantization below 8b. Additionally, ONNX QOp representation requires an output quantizer to be set at part of of the layer. \n",
     "\n",
-    "The constraint of always having an output quantizer is relaxed in the more recently introduced QDQ style of representation (for which support in Brevitas is still in-progress), which uses only `QuantizeLinear` and `DequantizeLinear` to represent quantization, but even with that support is still limited to 8b quantization."
+    "The constraint of always having an output quantizer is relaxed in the more recently introduced QDQ style of representation (for which there is support in Brevitas starting from version 0.8), which uses only `QuantizeLinear` and `DequantizeLinear` to represent quantization, but even with that support is still limited to 8b quantization."
    ]
   },
   {
@@ -1972,7 +1973,7 @@
    "source": [
     "## Export to custom Quantized ONNX\n",
     "\n",
-    "As an alternative, we can export it to a custom ONNX dialect that Brevitas defines with support for custom quantization operators that can capture those informations:"
+    "As an alternative, we can export it to QONNX, a custom ONNX dialect that Brevitas defines with support for custom quantization operators that can capture those informations:"
    ]
   },
   {
@@ -1983,7 +1984,7 @@
    "source": [
     "torch.manual_seed(0)\n",
     "\n",
-    "from brevitas.export import export_brevitas_onnx\n",
+    "from brevitas.export import export_qonnx\n",
     "from brevitas.quant import Int8WeightPerTensorFloat, Int8ActPerTensorFloat, Int16Bias\n",
     "\n",
     "float_inp = torch.randn(1, 2, 5)\n",
@@ -1995,7 +1996,7 @@
     "    bias_quant=Int16Bias)\n",
     "\n",
     "output_path = 'brevitas_onnx_conv4b8b.onnx'\n",
-    "export_brevitas_onnx(quant_conv_4b8b, input_t=float_inp, export_path=output_path)"
+    "export_qonnx(quant_conv_4b8b, input_t=float_inp, export_path=output_path)"
    ]
   },
   {
@@ -2059,7 +2060,7 @@
     "quant_conv_4b_weights = QuantConv1d(2, 4, 3, bias=True, weight_bit_width=4)\n",
     "\n",
     "output_path = 'brevitas_onnx_conv_4b_weights.onnx'\n",
-    "export_brevitas_onnx(quant_conv_4b_weights, input_t=float_inp, export_path=output_path)"
+    "export_qonnx(quant_conv_4b_weights, input_t=float_inp, export_path=output_path)"
    ]
   },
   {
@@ -2264,7 +2265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.9 64-bit",
+   "display_name": "Python 3.8.13 ('pytorch_latest')",
    "language": "python",
    "name": "python3"
   },
@@ -2278,11 +2279,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "b6e150ee02c45d2c3f896173a651a21b25567e05411969bcc0f3a62fa15a0a0b"
    }
   }
  },
