Feat: update interface for bias correction (#460)
* Feat (flexml): New interface for bias correction

* Test (graph): Test for bias correction

* Examples: Updated TVMCon tutorial

* Two-input test, for better generalization

* Renaming functions

* updated tutorial

* Hook-based implementation

* Optimized version, one less useless forward pass

* New revision of bias_correction. Improved tests and documentation

* Review

--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Brevitas requires Python 3.6+ and PyTorch 1.5.0+ and can be installed from PyPI with `pip install brevitas`. This notebook runs with Brevitas 0.7.1 and PyTorch 1.9.0 and is going to be available at `https://github.com/Xilinx/brevitas/tree/master/notebooks`."
+    "Brevitas requires Python 3.7+ and PyTorch 1.5.0+ and can be installed from PyPI with `pip install brevitas`. This notebook was originally released for Brevitas 0.7.1.\n",
+    "It has since been updated to run with Brevitas 0.8 and PyTorch 1.9.0 and is going to be available at `https://github.com/Xilinx/brevitas/tree/master/notebooks`."
    ]
   },
   {
@@ -2240,7 +2241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from brevitas.graph.calibrate import BiasCorrection\n",
+    "from brevitas.graph.calibrate import bias_correction_mode\n",
     "from brevitas.graph.calibrate import calibration_mode\n",
     "\n",
     "def calibrate_model(calibration_loader, quant_model, args):\n",
@@ -2251,13 +2252,12 @@
     "            for i, (images, _) in enumerate(calibration_loader):\n",
     "                print(f'Calibration iteration {i}')\n",
     "                quant_model(images)\n",
-    "        # Put the model in inference mode to use those statistics\n",
-    "        quant_model.eval()\n",
-    "        bc = BiasCorrection(iterations=len(calibration_loader))\n",
-    "        for i, (images, _) in enumerate(calibration_loader):\n",
-    "            print(f'Bias correction iteration {i}')\n",
-    "            # Apply bias correction\n",
-    "            quant_model = bc.apply(quant_model, images)\n",
+    "        \n",
+    "        # Apply bias correction\n",
+    "        with bias_correction_mode(quant_model):\n",
+    "            for i, (images, _) in enumerate(calibration_loader):\n",
+    "                print(f'Bias correction iteration {i}')\n",
+    "                quant_model(images)\n",
     "    return quant_model"
    ]
   }
