Fix (notebooks): installing dependencies and fix for high_percentile_q

--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -1261,7 +1261,7 @@
     "    float_to_int_impl_type = FloatToIntImplType.ROUND # round to nearest\n",
     "    scaling_impl_type = ScalingImplType.PARAMETER_FROM_STATS # scale is a parameter initialized from statistics\n",
     "    scaling_stats_op = StatsOp.PERCENTILE # scale statistics is a percentile of the abs value \n",
-    "    percentile_q = 99.999 # percentile is 99.999\n",
+    "    high_percentile_q = 99.999 # percentile is 99.999\n",
     "    collect_stats_steps = 300  # statistics are collected for 300 forward steps before switching to a learned parameter\n",
     "    restrict_scaling_type = RestrictValueType.FP # scale is a floating-point value\n",
     "    scaling_per_output_channel = False  # scale is per tensor\n",
@@ -1639,7 +1639,7 @@
     "    scaling_impl=ParameterFromRuntimeStatsScaling(\n",
     "        scaling_stats_input_view_shape_impl=OverTensorView(),\n",
     "        scaling_stats_impl=AbsPercentile(\n",
-    "            percentile_q=99.999, stats_reduce_dim=None),\n",
+    "            high_percentile_q=99.999, stats_reduce_dim=None),\n",
     "        collect_stats_steps=300)\n",
     ")"
    ]
@@ -1687,7 +1687,7 @@
     "    scaling_stats_input_view_shape_impl = OverTensorView\n",
     "    scaling_stats_impl = AbsPercentile\n",
     "    restrict_scaling_impl = FloatRestrictValue\n",
-    "    percentile_q = 99.999 \n",
+    "    high_percentile_q = 99.999 \n",
     "    collect_stats_steps = 300\n",
     "    scaling_shape = ()\n",
     "    stats_reduce_dim = None\n",
