Notebook: Updated TVMCon

--- a/notebooks/Brevitas_TVMCon2021.ipynb
+++ b/notebooks/Brevitas_TVMCon2021.ipynb
@@ -2114,7 +2114,7 @@
     "\n",
     "## Export to TorchScript quantization backend\n",
     "\n",
-    "It's also possible to export to TorchScript own quantized functional operators, which come with their own set of restrictions. In particular, when targeting x86, activations should be 7b and unsigned, which requires a zero-point. We can model that with appropriate quantizers:"
+    "It's also possible to export to TorchScript own quantized functional operators, which come with their own set of restrictions. In particular, weights should be 7b and unsigned, which requires a zero-point. We can model that with appropriate quantizers:"
    ]
   },
   {
@@ -2126,13 +2126,12 @@
     "from brevitas.quant import ShiftedUint8ActPerTensorFloat\n",
     "from brevitas.export import export_torch_qop\n",
     "\n",
-    "class ReducedRangeActQuant(ShiftedUint8ActPerTensorFloat):\n",
-    "    bit_width = 7\n",
     "\n",
     "quant_conv_8b7b = QuantConv1d(\n",
     "    2, 4, 3, bias=True,\n",
-    "    input_quant=ReducedRangeActQuant,\n",
-    "    output_quant=ReducedRangeActQuant,\n",
+    "    input_quant=ShiftedUint8ActPerTensorFloat,\n",
+    "    output_quant=ShiftedUint8ActPerTensorFloat,\n",
+    "    weight_bit_width=7,\n",
     "    bias_quant=Int16Bias)\n",
     "\n",
     "output_path = 'pytorch_qf_conv_8b7b.pt'\n",
@@ -2265,7 +2264,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('pytorch_latest')",
+   "display_name": "Python 3.7.15 ('torch_1.10')",
    "language": "python",
    "name": "python3"
   },
@@ -2279,11 +2278,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.7.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "b6e150ee02c45d2c3f896173a651a21b25567e05411969bcc0f3a62fa15a0a0b"
+    "hash": "98d39f4fefefd06bad749c114549705efc94e31e1348b8fb7b25329049b354fa"
    }
   }
  },
