Notebook: skip execution of show_netron in tests

--- a/notebooks/ONNX_export_tutorial.ipynb
+++ b/notebooks/ONNX_export_tutorial.ipynb
@@ -143,7 +143,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "skip-execution"
+    ]
    },
    "outputs": [
     {
@@ -246,7 +249,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "skip-execution"
+    ]
    },
    "outputs": [
     {
@@ -360,7 +366,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "skip-execution"
+    ]
    },
    "outputs": [
     {
@@ -683,7 +692,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "skip-execution"
+    ]
    },
    "outputs": [
     {
