--- a/notebooks/ONNX_export_tutorial.ipynb
+++ b/notebooks/ONNX_export_tutorial.ipynb
@@ -655,7 +655,7 @@
    ],
    "source": [
     "from brevitas.quant.scaled_int import Int8ActPerTensorFloat, Int32Bias\n",
-    "from brevitas.export import export_onnx_op\n",
+    "from brevitas.export import export_onnx_qop\n",
     "\n",
     "IN_CH = 3\n",
     "IMG_SIZE = 128\n",
@@ -681,7 +681,7 @@
     "model.eval()\n",
     "\n",
     "\n",
-    "export_onnx_op(\n",
+    "export_onnx_qop(\n",
     "    model, args=inp, export_path=\"quant_model_qop.onnx\")"
    ]
   },
@@ -946,7 +946,7 @@
     "inp = torch.randn(BATCH_SIZE, IN_CH, IMG_SIZE, IMG_SIZE)\n",
     "path = 'quant_model_qops_4b_4b.onnx'\n",
     "\n",
-    "exported_model = export_onnx_op(model, args=inp, export_path=path)\n",
+    "exported_model = export_onnx_qop(model, args=inp, export_path=path)\n",
     "\n",
     "sess_opt = ort.SessionOptions()\n",
     "sess = ort.InferenceSession(path, sess_opt)\n",
