Refactor: rename of torch export folder and ONNX functions (#500)
* Fix: rename of export folders and functions

* Typo

--- a/notebooks/ONNX_export_tutorial.ipynb
+++ b/notebooks/ONNX_export_tutorial.ipynb
@@ -123,7 +123,7 @@
    "source": [
     "import brevitas.nn as qnn\n",
     "import torch\n",
-    "from brevitas.export import export_standard_qcdq_onnx\n",
+    "from brevitas.export import export_onnx_qcdq\n",
     "\n",
     "IN_CH = 3\n",
     "OUT_CH = 128\n",
@@ -133,7 +133,7 @@
     "inp = torch.randn(BATCH_SIZE, IN_CH)\n",
     "path = 'quant_linear_qcdq.onnx'\n",
     "\n",
-    "exported_model = export_standard_qcdq_onnx(linear, args=inp, export_path=path, opset_version=13)\n"
+    "exported_model = export_onnx_qcdq(linear, args=inp, export_path=path, opset_version=13)\n"
    ]
   },
   {
@@ -239,7 +239,7 @@
     "inp = torch.randn(BATCH_SIZE, IN_CH)\n",
     "path = 'quant_model_qcdq.onnx'\n",
     "\n",
-    "exported_model = export_standard_qcdq_onnx(model, args=inp, export_path=path, opset_version=13)"
+    "exported_model = export_onnx_qcdq(model, args=inp, export_path=path, opset_version=13)"
    ]
   },
   {
@@ -356,7 +356,7 @@
     "inp = torch.randn(BATCH_SIZE, IN_CH)\n",
     "path = 'quant_model_3b_4b_qcdq.onnx'\n",
     "\n",
-    "exported_model = export_standard_qcdq_onnx(model, args=inp, export_path=path, opset_version=13)"
+    "exported_model = export_onnx_qcdq(model, args=inp, export_path=path, opset_version=13)"
    ]
   },
   {
@@ -655,7 +655,7 @@
    ],
    "source": [
     "from brevitas.quant.scaled_int import Int8ActPerTensorFloat, Int32Bias\n",
-    "from brevitas.export import export_standard_qop_onnx\n",
+    "from brevitas.export import export_onnx_qop\n",
     "\n",
     "IN_CH = 3\n",
     "IMG_SIZE = 128\n",
@@ -681,7 +681,7 @@
     "model.eval()\n",
     "\n",
     "\n",
-    "export_standard_qop_onnx(\n",
+    "export_onnx_qop(\n",
     "    model, args=inp, export_path=\"quant_model_qop.onnx\")"
    ]
   },
@@ -814,7 +814,7 @@
     "inp = torch.randn(BATCH_SIZE, IN_CH)\n",
     "path = 'quant_model_3b_4b_qcdq.onnx'\n",
     "\n",
-    "exported_model = export_standard_qcdq_onnx(model, args=inp, export_path=path, opset_version=13)\n",
+    "exported_model = export_onnx_qcdq(model, args=inp, export_path=path, opset_version=13)\n",
     "\n",
     "sess_opt = ort.SessionOptions()\n",
     "sess = ort.InferenceSession(path, sess_opt)\n",
@@ -946,7 +946,7 @@
     "inp = torch.randn(BATCH_SIZE, IN_CH, IMG_SIZE, IMG_SIZE)\n",
     "path = 'quant_model_qops_4b_4b.onnx'\n",
     "\n",
-    "exported_model = export_standard_qop_onnx(model, args=inp, export_path=path)\n",
+    "exported_model = export_onnx_qop(model, args=inp, export_path=path)\n",
     "\n",
     "sess_opt = ort.SessionOptions()\n",
     "sess = ort.InferenceSession(path, sess_opt)\n",
