Docs (notebooks): clean-up titles

--- a/notebooks/ONNX_export_tutorial.ipynb
+++ b/notebooks/ONNX_export_tutorial.ipynb
@@ -1,17 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "# Requirements"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
@@ -20,6 +10,10 @@
     }
    },
    "source": [
+    "# ONNX Export\n",
+    "\n",
+    "## Requirements\n",
+    "\n",
     "Brevitas requires Python 3.7+ and PyTorch 1.5.1+ and can be installed from PyPI with `pip install brevitas`. \n",
     "\n",
     "For this notebook, you will also need to install `onnx`, `onnxruntime`, `onnxoptimizer` and `netron` (for visualization of ONNX models).\n",
@@ -27,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
@@ -35,7 +30,7 @@
     }
    },
    "source": [
-    "# Introduction\n",
+    "## Introduction\n",
     "\n",
     "The main goal of this notebook is to show how to use Brevitas to export your models in the two standards currently supported by ONNX for quantized models: QCDQ and QOps (i.e., `QLinearConv`, `QLinearMatMul`). Once exported, these models can be run using onnxruntime.\n",
     "\n",
@@ -739,6 +734,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
@@ -747,7 +743,7 @@
     }
    },
    "source": [
-    "#### Clipping in QOps\n",
+    "### Clipping in QOps\n",
     "\n",
     "Even when using `QLinearConv` and `QLinearMatMul`, it is still possible to represent bit-width < 8 through the use of clipping.\n",
     "\n",
