Fix (Notebook): netron is installed in ONNX notebook

--- a/notebooks/ONNX_export_tutorial.ipynb
+++ b/notebooks/ONNX_export_tutorial.ipynb
@@ -21,6 +21,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install netron"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
