Docs: update docs and READMEs
Signed-off-by: Alessandro Pappalardo <alessand@amd.com>

--- a/docs/tutorials/onnx_export.ipynb
+++ b/docs/tutorials/onnx_export.ipynb
@@ -21,6 +21,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install netron"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
@@ -118,7 +127,7 @@
    "source": [
     "import brevitas.nn as qnn\n",
     "import torch\n",
-    "from brevitas.export import export_standard_qcdq_onnx\n",
+    "from brevitas.export import export_onnx_qcdq\n",
     "\n",
     "IN_CH = 3\n",
     "OUT_CH = 128\n",
@@ -128,7 +137,7 @@
     "inp = torch.randn(BATCH_SIZE, IN_CH)\n",
     "path = 'quant_linear_qcdq.onnx'\n",
     "\n",
-    "exported_model = export_standard_qcdq_onnx(linear, args=inp, export_path=path, opset_version=13)\n"
+    "exported_model = export_onnx_qcdq(linear, args=inp, export_path=path, opset_version=13)\n"
    ]
   },
   {
@@ -138,7 +147,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "skip-execution"
+    ]
    },
    "outputs": [
     {
@@ -231,7 +243,7 @@
     "inp = torch.randn(BATCH_SIZE, IN_CH)\n",
     "path = 'quant_model_qcdq.onnx'\n",
     "\n",
-    "exported_model = export_standard_qcdq_onnx(model, args=inp, export_path=path, opset_version=13)"
+    "exported_model = export_onnx_qcdq(model, args=inp, export_path=path, opset_version=13)"
    ]
   },
   {
@@ -241,7 +253,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "skip-execution"
+    ]
    },
    "outputs": [
     {
@@ -345,7 +360,7 @@
     "inp = torch.randn(BATCH_SIZE, IN_CH)\n",
     "path = 'quant_model_3b_4b_qcdq.onnx'\n",
     "\n",
-    "exported_model = export_standard_qcdq_onnx(model, args=inp, export_path=path, opset_version=13)"
+    "exported_model = export_onnx_qcdq(model, args=inp, export_path=path, opset_version=13)"
    ]
   },
   {
@@ -355,7 +370,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "skip-execution"
+    ]
    },
    "outputs": [
     {
@@ -641,7 +659,7 @@
    ],
    "source": [
     "from brevitas.quant.scaled_int import Int8ActPerTensorFloat, Int32Bias\n",
-    "from brevitas.export import export_standard_qop_onnx\n",
+    "from brevitas.export import export_onnx_qop\n",
     "\n",
     "IN_CH = 3\n",
     "IMG_SIZE = 128\n",
@@ -667,7 +685,7 @@
     "model.eval()\n",
     "\n",
     "\n",
-    "export_standard_qop_onnx(\n",
+    "export_onnx_qop(\n",
     "    model, args=inp, export_path=\"quant_model_qop.onnx\")"
    ]
   },
@@ -678,7 +696,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "skip-execution"
+    ]
    },
    "outputs": [
     {
@@ -798,7 +819,7 @@
     "inp = torch.randn(BATCH_SIZE, IN_CH)\n",
     "path = 'quant_model_3b_4b_qcdq.onnx'\n",
     "\n",
-    "exported_model = export_standard_qcdq_onnx(model, args=inp, export_path=path, opset_version=13)\n",
+    "exported_model = export_onnx_qcdq(model, args=inp, export_path=path, opset_version=13)\n",
     "\n",
     "sess_opt = ort.SessionOptions()\n",
     "sess = ort.InferenceSession(path, sess_opt)\n",
@@ -930,7 +951,7 @@
     "inp = torch.randn(BATCH_SIZE, IN_CH, IMG_SIZE, IMG_SIZE)\n",
     "path = 'quant_model_qops_4b_4b.onnx'\n",
     "\n",
-    "exported_model = export_standard_qop_onnx(model, args=inp, export_path=path)\n",
+    "exported_model = export_onnx_qop(model, args=inp, export_path=path)\n",
     "\n",
     "sess_opt = ort.SessionOptions()\n",
     "sess = ort.InferenceSession(path, sess_opt)\n",
