--- a/docs/tutorials/quant_activation_overview.ipynb
+++ b/docs/tutorials/quant_activation_overview.ipynb
@@ -54,7 +54,7 @@
     "out_tensor1 = output_quant_conv(inp)\n",
     "out_tensor2 = output_identity_quant(default_quant_conv(inp))\n",
     "\n",
-    "out_tensor1.isclose(out_tensor2).all().item()"
+    "assert out_tensor1.isclose(out_tensor2).all().item()"
    ]
   },
   {
@@ -96,7 +96,7 @@
     "out_tensor1 = input_output_quant_conv(inp)\n",
     "out_tensor2 = output_identity_quant(default_quant_conv(input_identity_quant(inp)))\n",
     "\n",
-    "out_tensor1.isclose(out_tensor2).all().item()"
+    "assert out_tensor1.isclose(out_tensor2).all().item()"
    ]
   },
   {
@@ -159,7 +159,8 @@
        "          [ 0.6468, -0.2473, -0.5327,  1.1605,  0.4376],\n",
        "          [-0.7990, -1.2936, -0.7419, -1.3127, -0.2283],\n",
        "          [-2.4351, -0.0761,  0.2283,  0.7990, -0.1902],\n",
-       "          [-0.3615, -1.2175, -0.6278, -0.4566,  1.9214]]]]), scale=tensor(0.0190), zero_point=tensor(0.), bit_width=tensor(8.), signed_t=tensor(True), training_t=tensor(True))"
+       "          [-0.3615, -1.2175, -0.6278, -0.4566,  1.9214]]]],\n",
+       "       grad_fn=<MulBackward0>), scale=tensor(0.0190, grad_fn=<DivBackward0>), zero_point=tensor(0.), bit_width=tensor(8.), signed_t=tensor(True), training_t=tensor(True))"
       ]
      },
      "execution_count": 4,
@@ -190,7 +191,7 @@
     }
    ],
    "source": [
-    "out_tensor.is_valid"
+    "assert out_tensor.is_valid"
    ]
   },
   {
@@ -218,7 +219,8 @@
        "          [ 0.6468, -0.2473, -0.5327,  1.1605,  0.4376],\n",
        "          [-0.7990, -1.2936, -0.7419, -1.3127, -0.2283],\n",
        "          [-2.4351, -0.0761,  0.2283,  0.7990, -0.1902],\n",
-       "          [-0.3615, -1.2175, -0.6278, -0.4566,  1.9214]]]])"
+       "          [-0.3615, -1.2175, -0.6278, -0.4566,  1.9214]]]],\n",
+       "       grad_fn=<MulBackward0>)"
       ]
      },
      "execution_count": 6,
@@ -249,7 +251,8 @@
        "          [ 0.6468, -0.2473, -0.5327,  1.1605,  0.4376],\n",
        "          [-0.7990, -1.2936, -0.7419, -1.3127, -0.2283],\n",
        "          [-2.4351, -0.0761,  0.2283,  0.7990, -0.1902],\n",
-       "          [-0.3615, -1.2175, -0.6278, -0.4566,  1.9214]]]]), scale=tensor(0.0190), zero_point=tensor(0.), bit_width=tensor(8.), signed_t=tensor(True), training_t=tensor(True))"
+       "          [-0.3615, -1.2175, -0.6278, -0.4566,  1.9214]]]],\n",
+       "       grad_fn=<MulBackward0>), scale=tensor(0.0190, grad_fn=<DivBackward0>), zero_point=tensor(0.), bit_width=tensor(8.), signed_t=tensor(True), training_t=tensor(True))"
       ]
      },
      "execution_count": 7,
@@ -288,7 +291,7 @@
        "          [0.6348, 0.0000, 0.0000, 1.1668, 0.4387],\n",
        "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
        "          [0.0000, 0.0000, 0.2334, 0.7935, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000, 0.0000, 1.9230]]]]), scale=tensor(0.0093), zero_point=tensor(0.), bit_width=tensor(8.), signed_t=tensor(False), training_t=tensor(True))"
+       "          [0.0000, 0.0000, 0.0000, 0.0000, 1.9230]]]], grad_fn=<MulBackward0>), scale=tensor(0.0093, grad_fn=<DivBackward0>), zero_point=tensor(0.), bit_width=tensor(8.), signed_t=tensor(False), training_t=tensor(True))"
       ]
      },
      "execution_count": 8,
@@ -314,22 +317,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "return_disabled_quant_relu = QuantReLU(act_quant=None, return_quant_tensor=True)\n",
     "relu_out_tensor = return_disabled_quant_relu(out_tensor)\n",
-    "relu_out_tensor.is_valid"
+    "assert relu_out_tensor.is_valid==True\n",
+    "assert relu_out_tensor.scale == out_tensor.scale\n",
+    "assert relu_out_tensor.zero_point == out_tensor.zero_point\n",
+    "assert relu_out_tensor.bit_width == out_tensor.bit_width"
    ]
   },
   {
@@ -347,7 +342,7 @@
     {
      "data": {
       "text/plain": [
-       "QuantTensor(value=tensor([[[[0.3878, 0.3611, 0.3655, 0.6433, 0.8236],\n",
+       "QuantTensor(value=(tensor([[[[0.3878, 0.3611, 0.3655, 0.6433, 0.8236],\n",
        "          [0.6257, 0.3567, 0.3611, 0.5474, 0.4810],\n",
        "          [0.3788, 0.1820, 0.4526, 0.6077, 0.7911],\n",
        "          [0.1630, 0.8883, 0.8471, 0.9151, 0.2456],\n",
@@ -357,7 +352,8 @@
        "          [0.6563, 0.4385, 0.3699, 0.7614, 0.6077],\n",
        "          [0.3102, 0.2152, 0.3226, 0.2120, 0.4432],\n",
        "          [0.0805, 0.4810, 0.5568, 0.6898, 0.4526],\n",
-       "          [0.4106, 0.2284, 0.3480, 0.3878, 0.8723]]]]), scale=None, zero_point=None, bit_width=None, signed_t=None, training_t=tensor(True))"
+       "          [0.4106, 0.2284, 0.3480, 0.3878, 0.8723]]]],\n",
+       "       grad_fn=<SigmoidBackward0>), None, None, None), scale=None, zero_point=None, bit_width=None, signed_t=None, training_t=tensor(True))"
       ]
      },
      "execution_count": 10,
@@ -390,7 +386,7 @@
     }
    ],
    "source": [
-    "sigmoid_out_tensor.is_valid"
+    "assert not sigmoid_out_tensor.is_valid"
    ]
   },
   {
@@ -420,7 +416,7 @@
        "          [0.6421, 0.0000, 0.0000, 1.1708, 0.4343],\n",
        "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
        "          [0.0000, 0.0000, 0.2266, 0.7931, 0.0000],\n",
-       "          [0.0000, 0.0000, 0.0000, 0.0000, 1.9262]]]]), scale=tensor(0.0189), zero_point=tensor(129.), bit_width=tensor(8.), signed_t=tensor(False), training_t=tensor(True))"
+       "          [0.0000, 0.0000, 0.0000, 0.0000, 1.9262]]]], grad_fn=<ReluBackward0>), scale=tensor(0.0189, grad_fn=<DivBackward0>), zero_point=tensor(129., grad_fn=<SWhereBackward0>), bit_width=tensor(8.), signed_t=tensor(False), training_t=tensor(True))"
       ]
      },
      "execution_count": 12,
@@ -574,7 +570,7 @@
    "source": [
     "out1_train = quant_identity(inp1)\n",
     "out2_train = quant_identity(inp2)\n",
-    "out1_train.scale.isclose(out2_train.scale).item()"
+    "assert not out1_train.scale.isclose(out2_train.scale).item()"
    ]
   },
   {
@@ -597,7 +593,7 @@
     "quant_identity.eval()\n",
     "out1_eval = quant_identity(inp1)\n",
     "out2_eval = quant_identity(inp2)\n",
-    "out1_eval.scale.isclose(out2_eval.scale).item()"
+    "assert out1_eval.scale.isclose(out2_eval.scale).item()"
    ]
   },
   {
@@ -686,7 +682,7 @@
     "out1_train = quant_hard_tanh(inp1)\n",
     "quant_hard_tanh.eval()\n",
     "out2_eval = quant_hard_tanh(inp2)\n",
-    "out1_train.scale.isclose(out2_eval.scale).item()"
+    "assert out1_train.scale.isclose(out2_eval.scale).item()"
    ]
   },
   {
