--- a/docs/tutorials/quant_recurrent.ipynb
+++ b/docs/tutorials/quant_recurrent.ipynb
@@ -927,11 +927,11 @@
    "source": [
     "import torch\n",
     "from brevitas.nn import QuantLSTM\n",
-    "from brevitas.export import export_standard_qcdq_onnx\n",
+    "from brevitas.export import export_onnx_qcdq\n",
     "\n",
     "quant_lstm_weight_only = QuantLSTM(input_size=10, hidden_size=20, weight_bit_width=4, io_quant=None, bias_quant=None, gate_acc_quant=None, sigmoid_quant=None, tanh_quant=None, cell_state_quant=None)\n",
     "export_path = 'quant_lstm_weight_only_4b.onnx'\n",
-    "export_standard_qcdq_onnx(quant_lstm_weight_only, (torch.randn(5, 1, 10)), opset_version=14, export_path=export_path)\n",
+    "export_onnx_qcdq(quant_lstm_weight_only, (torch.randn(5, 1, 10)), opset_version=14, export_path=export_path)\n",
     "show_netron(export_path, 8080)"
    ]
   },
@@ -1004,13 +1004,13 @@
    "source": [
     "import torch\n",
     "from brevitas.nn import QuantLSTM\n",
-    "from brevitas.export import export_standard_qcdq_onnx\n",
+    "from brevitas.export import export_onnx_qcdq\n",
     "\n",
     "quant_lstm_weight_only_cifg = QuantLSTM(\n",
     "    input_size=10, hidden_size=20, coupled_input_forget_gates=True, weight_bit_width=4,\n",
     "    io_quant=None, bias_quant=None, gate_acc_quant=None, sigmoid_quant=None, tanh_quant=None, cell_state_quant=None)\n",
     "export_path = 'quant_lstm_weight_only_cifg_4b.onnx'\n",
-    "export_standard_qcdq_onnx(quant_lstm_weight_only_cifg, (torch.randn(5, 1, 10)), opset_version=14, export_path=export_path)\n",
+    "export_onnx_qcdq(quant_lstm_weight_only_cifg, (torch.randn(5, 1, 10)), opset_version=14, export_path=export_path)\n",
     "show_netron(export_path, 8082)"
    ]
   },
@@ -1091,13 +1091,13 @@
    "source": [
     "import torch\n",
     "from brevitas.nn import QuantLSTM\n",
-    "from brevitas.export import export_standard_qcdq_onnx\n",
+    "from brevitas.export import export_onnx_qcdq\n",
     "\n",
     "quant_lstm_weight_only_bidirectional_2_layers = QuantLSTM(\n",
     "    input_size=10, hidden_size=20, bidirectional=True, num_layers=2, weight_bit_width=4,\n",
     "    io_quant=None, bias_quant=None, gate_acc_quant=None, sigmoid_quant=None, tanh_quant=None, cell_state_quant=None)\n",
     "export_path = 'quant_lstm_weight_only_bidirectional_2_layers.onnx'\n",
-    "export_standard_qcdq_onnx(quant_lstm_weight_only_bidirectional_2_layers, (torch.randn(5, 1, 10)), opset_version=14, export_path=export_path)\n",
+    "export_onnx_qcdq(quant_lstm_weight_only_bidirectional_2_layers, (torch.randn(5, 1, 10)), opset_version=14, export_path=export_path)\n",
     "show_netron(export_path, 8083)"
    ]
   },
@@ -1154,13 +1154,13 @@
    "source": [
     "import torch\n",
     "from brevitas.nn import QuantLSTM\n",
-    "from brevitas.export import export_standard_qcdq_onnx\n",
+    "from brevitas.export import export_onnx_qcdq\n",
     "\n",
     "quant_lstm_weight_only_bidirectional_2_layers_shared = QuantLSTM(\n",
     "    input_size=10, hidden_size=20, bidirectional=True, shared_input_hidden_weights=True, weight_bit_width=4,\n",
     "    io_quant=None, bias_quant=None, gate_acc_quant=None, sigmoid_quant=None, tanh_quant=None, cell_state_quant=None)\n",
     "export_path = 'quant_lstm_weight_only_bidirectional_2_layers_shared_ih.onnx'\n",
-    "export_standard_qcdq_onnx(quant_lstm_weight_only_bidirectional_2_layers_shared, (torch.randn(5, 1, 10)), opset_version=14, export_path=export_path)\n",
+    "export_onnx_qcdq(quant_lstm_weight_only_bidirectional_2_layers_shared, (torch.randn(5, 1, 10)), opset_version=14, export_path=export_path)\n",
     "show_netron(export_path, 8085)"
    ]
   },
@@ -1218,13 +1218,13 @@
    "source": [
     "import torch\n",
     "from brevitas.nn import QuantLSTM\n",
-    "from brevitas.export import export_standard_qcdq_onnx\n",
+    "from brevitas.export import export_onnx_qcdq\n",
     "\n",
     "quant_lstm_weight_only_bidirectional_2_layers = QuantLSTM(\n",
     "    input_size=10, hidden_size=20, bidirectional=True, num_layers=2, weight_bit_width=4, shared_intra_layer_weight_quant=True,\n",
     "    io_quant=None, bias_quant=None, gate_acc_quant=None, sigmoid_quant=None, tanh_quant=None, cell_state_quant=None)\n",
     "export_path = 'quant_lstm_weight_only_bidirectional_2_layers_shared_q.onnx'\n",
-    "export_standard_qcdq_onnx(quant_lstm_weight_only_bidirectional_2_layers, (torch.randn(5, 1, 10)), opset_version=14, export_path=export_path)\n",
+    "export_onnx_qcdq(quant_lstm_weight_only_bidirectional_2_layers, (torch.randn(5, 1, 10)), opset_version=14, export_path=export_path)\n",
     "show_netron(export_path, 8086)"
    ]
   },
@@ -1282,14 +1282,14 @@
    "source": [
     "import torch\n",
     "from brevitas.nn import QuantLSTM\n",
-    "from brevitas.export import export_standard_qcdq_onnx\n",
+    "from brevitas.export import export_onnx_qcdq\n",
     "\n",
     "quant_lstm_weight_only_bidirectional_2_layers = QuantLSTM(\n",
     "    input_size=10, hidden_size=20, bidirectional=True, num_layers=2, weight_bit_width=4, \n",
     "    shared_input_hidden_weights=True, shared_intra_layer_weight_quant=True,\n",
     "    io_quant=None, bias_quant=None, gate_acc_quant=None, sigmoid_quant=None, tanh_quant=None, cell_state_quant=None)\n",
     "export_path = 'quant_lstm_weight_only_bidirectional_2_layers_shared_q_ih.onnx'\n",
-    "export_standard_qcdq_onnx(quant_lstm_weight_only_bidirectional_2_layers, (torch.randn(5, 1, 10)), opset_version=14, export_path=export_path)\n",
+    "export_onnx_qcdq(quant_lstm_weight_only_bidirectional_2_layers, (torch.randn(5, 1, 10)), opset_version=14, export_path=export_path)\n",
     "show_netron(export_path, 8087)"
    ]
   },
