--- a/docs/tutorials/tvmcon2021.ipynb
+++ b/docs/tutorials/tvmcon2021.ipynb
@@ -1902,7 +1902,7 @@
     "\n",
     "from brevitas.nn import QuantConv1d\n",
     "from brevitas.quant import Int8WeightPerTensorFloat, Int8ActPerTensorFloat, Int16Bias\n",
-    "from brevitas.export import export_standard_qop_onnx\n",
+    "from brevitas.export import export_onnx_qop\n",
     "\n",
     "float_inp = torch.randn(1, 2, 5)\n",
     "\n",
@@ -1913,7 +1913,7 @@
     "    bias_quant=Int16Bias)\n",
     "\n",
     "output_path = 'qop_onnx_conv_4b8b.onnx'\n",
-    "export_standard_qop_onnx(quant_conv_4b8b, input_t=float_inp, export_path=output_path)"
+    "export_onnx_qop(quant_conv_4b8b, input_t=float_inp, export_path=output_path)"
    ]
   },
   {
